# sb-xray

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-diagrams.md  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  readme.md  release.sh  versions.json
docs/: 00-build-release.md  01-architecture-and-traffic.md  02-protocols-and-security.md  03-routing-and-clients.md  04-ops-and-troubleshooting.md  05-build-release.md  05-reverse-proxy-guide.md  06-event-bus-shoutrrr.md  06-reverse-proxy-guide.md  07-event-bus-shoutrrr.md  07-new-features-guide.md  07-tailscale-proxy-architecture.md  08-cn-exit-guide.md  08-tailscale-proxy-architecture.md  08-xray-reverse-bridge.md  09-feature-flags-and-capabilities.md  09-nas-remote-access.md  09-tailscale-proxy-architecture.md  09-xray-reverse-bridge.md  10-multi-wan-leak-prevention.md  10-xray-reverse-bridge.md  11-openwrt-rebuild-and-cutover.md  11-openwrt-reinitialize.md  12-disaster-recovery-cutover.md
openwrt/: README.md  cn-bridge  cn-bridge-monitor  cn-exit-setup.sh  config.env.example  install.sh
scripts/: check_ip_type.sh  entrypoint.py  entrypoint.sh  geo_update.sh  shoutrrr-forwarder.py  show  show-config.sh  test_entrypoint.sh  test_smoke.sh  verify_geosite_clean.py  vps-cn-exit-init.sh
tests/: conftest.py  test_build_isp_outbounds.py  test_build_sb_urltest_set.py  test_build_supply_chain.py  test_cert.py  test_cert_renew.py  test_config_builder.py  test_defensive_paths.py  test_dhparam.py  test_display.py  test_dockerfile_go_memory_defaults.py  test_docs_consistency.py  test_entrypoint_py.py  test_env.py  test_events.py  test_fallback_resolver.py  test_gen_deploy_config.py  test_geo.py  test_http.py  test_isp_retest.py  test_isp_speed_switch_opt.py  test_keys.py  test_logging.py  (+42 more)
(+128 files in other folders)
